# estebanborai.com

./: .babelrc  .editorconfig  .env.sample  .eslintrc  .eslintrc.json  .gitignore  .typesafe-i18n.json  CNAME  Cargo.toml  Justfile  README.md  RustConfig  bun.lockb  bundle.sh  docker-compose.yml  gatsby-config.js  index.html  index.js  main.dd1f727865070d477317.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  publish.sh  snowpack.config.js  style.css  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js  webpack.config.js
.github/workflows/: calibreapp-image-actions.yml  database-migrations.yml  deploy-client-production.yml  deploy-client-staging.yml  deploy-gateway-production.yml  deploy-gateway-staging.yml  deploy-server-production.yml  deploy-server-staging.yml  deploy-staging.yml  deploy.yml  gh-pages.yml  lint.yml  production.yml  staging.yml
bundle/: index.html  index.js
client/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
client/src/: app.rs  macros.rs  main.rs  router.rs
client/src/components/: mod.rs
client/src/components/icon/: list.rs  twitter.rs
client/src/components/layout/: header.rs  mod.rs  styles.scss
client/src/javascripts/: hljs.js
client/src/lib/components/: Footer.svelte  Header.svelte
client/src/lib/components/icons/: Hourglass.svelte  LinkedIn.svelte  Moon.svelte  Sun.svelte
client/src/lib/modules/notes/components/: Entry.svelte
client/src/lib/styles/: global.css
client/src/modules/: mod.rs
client/src/modules/home/: mod.rs
client/src/modules/notes/: utils.rs
client/src/modules/notes/components/: mod.rs  note_item.rs
client/src/pages/: index.rs  mod.rs
client/src/pages/notes/: index.rs  note.rs  styles.scss
client/src/routes/: __layout.svelte  index.svelte  notes.svelte
client/src/routes/notes/: [slug].svelte  index.svelte
client/src/styles/: animation.scss
config/: helpers.js  webpack.config.common.js  webpack.config.dev.js  webpack.config.prod.js
config/env/: .env.dev  .env.prod  .env.staging
crates/cli/: Cargo.toml
crates/cli/src/: bookmarks.rs  lib.rs  notes.rs  notes_index.rs
crates/notes/: Cargo.toml
crates/notes/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/www/: Cargo.toml  Trunk.toml  tailwind.config.js
crates/www/assets/: notes_index.json
crates/www/assets/db/: bookshelf.json  projects.json
crates/www/assets/notes/: deploy-rust-to-fly-io.md  docker-postgresql-restore-database.md  http-server-with-rust.md  installing-the-rust-programming-language-on-windows.md  introduction-to-git.md  pxid-developer-friendy-ids.md  rust-and-its-general-purpose-nature.md  rust-github-actions-release-workflow.md  setup-google-cloud-sql-proxy-on-macos.md  setup-poetry-development-environment-osx.md  uploading-files-to-graphql-server-with-urql.md  writing-e2e-tests-for-axum-and-graphql.md
crates/www/public/: index.html  styles.css
crates/www/src/: lib.rs  utils.rs
crates/www/src/components/atoms/: mod.rs  section.rs
crates/www/src/components/atoms/icons/: briefcase.rs  github.rs  globe.rs  mod.rs
crates/www/src/routes/: about.rs  bookshelf.rs  home.rs  mod.rs  projects.rs
crates/www/src/routes/notes/: mod.rs  slug.rs
css/: 0.6bfa20580a7737b2e4ff.css  0.cde053877003e9cff0b3.css
data/: background.json
docs/: markdown.md
domain/: Cargo.toml
domain/src/: lib.rs
gateway/: Cargo.toml
gateway/src/: lib.rs  utils.rs
js/: 0.8a6577cbd6a51731d370.chunk.js  1.d729fe1ea59b133edfe2.chunk.js  2.6bfa20580a7737b2e4ff.chunk.js  2.8a6577cbd6a51731d370.chunk.js  2.cde053877003e9cff0b3.chunk.js  3.6bfa20580a7737b2e4ff.chunk.js  3.8a6577cbd6a51731d370.chunk.js  3.cde053877003e9cff0b3.chunk.js  3.d729fe1ea59b133edfe2.chunk.js  4.6bfa20580a7737b2e4ff.chunk.js  4.cde053877003e9cff0b3.chunk.js
migrations/: 20211011162733_notes_metadata.sql  20211011163126_notes_content.sql  20211012035514_notes_metadata_slug_index.sql  20211019220402_add_metadata_preview_image_url.sql
notes/: 001-installing-the-rust-programming-language-on-windows.md
public/: index.ejs  index.html  manifest.json
server/: .env.sample  Cargo.toml
server/migrations/2022-01-10-030901_create_uuid_extension/: down.sql  up.sql
server/migrations/2022-01-10-034204_create_table_notes/: down.sql  up.sql
server/migrations/2022-01-21-224044_create_index_notes_slug/: down.sql  up.sql
server/sql/: insert_notes_content.sql  insert_notes_metadata.sql  select_most_recent_row_notes_metadata.sql  select_notes_content_where_slug.sql  select_notes_metadata.sql  upsert_notes_content.sql  upsert_notes_metadata.sql
server/src/: config.rs  error.rs  main.rs  models.rs  routes.rs  schema.rs
server/src/graphql/: mod.rs
server/src/graphql/query/: mod.rs  notes.rs
server/src/middleware/: cors.rs
server/src/routes/: mod.rs  notes.rs
server/src/services/: github.rs  mod.rs  notes.rs
src/: App.tsx  app.css  app.d.ts  app.html  app.rs  global.d.ts  hooks.server.ts  i18n.js  index.css  index.html  index.jsx  index.tsx  main.rs  main.tsx  router.rs  service-worker.ts  style.scss  tailwind.css  tailwind.output.css
src/@types/: github.d.ts  global.d.ts  styled-components.d.ts  website.d.ts
src/components/: App.jsx  App.tsx  CautionDeveloperWorkingOverhead.tsx  ErrorBoundary.tsx  Headline.tsx  Picture.tsx  Section.tsx  Subtitle.tsx  SuspenseFallback.tsx  Switch.tsx  Title.tsx  header.rs  layout.css  layout.tsx  mod.rs
src/context/: error-context.tsx  github-context.tsx  index.ts  settings.tsx
src/hooks/: use-settings.ts
src/i18n/: i18n-types.ts  i18n-util.async.ts  i18n-util.sync.ts  i18n-util.ts
src/javascripts/: hljs.js
src/layout/: index.tsx
src/modules/: mod.rs
src/pages/: index.rs  index.tsx  mod.rs  page-2.tsx  router.tsx
src/params/: lang.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts  __layout.svelte  index.svelte  projects.svelte
src/styles/: article.scss  global.css  home.scss  styles.css  (+3 more)
static/: manifest.json
workers-site/: index.js  package-lock.json  package.json
(+185 files in other folders)
