[workspace]
default-members = ["crates/cli"]
members = [
    "crates/cli",
    "crates/notes",
]

[workspace.dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.104" }
thiserror = "1.0.38"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.15"
