[workspace]
members = [
    "crates/www",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
leptos =  { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
markdown = "=1.0.0-alpha.21"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
yaml-front-matter = "0.1.0"
wasm-bindgen = "0.2"
