[package]
name = "client"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
pulldown-cmark = "0.7.2"
serde = "1.0.130"
wasm-bindgen = "=0.2.74"
wee_alloc = "0.4.5"
yew = "0.18"
yew-router = "0.15.0"
yaml-front-matter = "0.1.0"

[dependencies.web-sys]
default-features = false
features = ["Url", "UrlSearchParams"]
version = "0.3.51"
