[package]
name = "domain"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.130"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["serde"] }
