[package]
name = "server"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
reqwest = { version = "0.11.5", features = ["json", "serde_json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.68"
sentry = "0.23.0"
slug = "0.1.4"
sqlx = { version = "0.5.5", features = ["chrono", "postgres", "uuid", "runtime-tokio-rustls" ] }
uuid = { version = "0.8.2", features = ["serde"] }
yaml-front-matter = "0.1.0"
