[package]
name = "cli"
version = "0.0.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
publish = false

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "env"] }
dotenv = { workspace = true }
link-preview = { workspace = true, features = ["fetch"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local
proto = { path = "../proto" }
