[package]
name = "notes"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "notes"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.48"
yaml-front-matter = "0.1.0"

# Workspace Dependencies
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
