[package]
name = "proto"
version = "0.0.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
publish = false

[lib]
name = "proto"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
yaml-front-matter = { workspace = true }
