[package]
name = "estebanborai-dotcom"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "www"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true, features = ["csr"] }
pulldown-cmark = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
yaml-front-matter = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window"] }

# Local
proto = { path = "../proto" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
